Covers fix4

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -1,7 +1,7 @@
 .covers{
   background-color: #1C1D20;
-  background-image: url('/src/img/Covers/background.png');
-  background-size: cover;       
+  background-image: url('../img/Covers/background.png');
+ background-size: contain;   
   background-position: center;  
   background-repeat: no-repeat; 
   background-attachment: fixed; 
